# lmsyft

./: .buildinfo  .env.analyst.conf  .env.broker.conf  .env.conf  .env.task.conf  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .project  .pydevproject  Dockerfile  README.md  __init__.py  cfn-glue-pipeline.yaml  compose.calc_stats.yml  compose.development.yml  compose.yml  docker-compose.development.yml  docker-compose.yml  environment.yml  genindex.html  index.html  objects.inv  pull_request_template.md  pyproject.toml  requirements-docs.txt  requirements-test.txt  requirements.txt  search.html  searchindex.js  setup.cfg  specnet-glue-pipeline.yaml
.github/linters/: .flake8  .isort.cfg  regex-blacklist.txt
.github/workflows/: build_sphinx_docs.yml
_sources/about/: install_run_notes.rst.txt  tos.rst.txt
_sources/aws/: aws-setup.rst.txt  aws_experiment.rst.txt  aws_workflow.rst.txt
_sources/flask/: structure.rst.txt
_sources/misc/: debugging.rst.txt  deploy.rst.txt  example_sp6_export.rst.txt  prerequisites.rst.txt  ssl_certificates.rst.txt  testing.rst.txt
about/: install_run_notes.html  s2n_overview.html  tos.html  use_cases.html
aws/: aws-setup.html  aws_experiment.html  aws_workflow.html
aws/redshift/: create_sps_functions.sql
config/: analyst.nginx.conf  aws.conf  broker.nginx.conf  nginx.conf
cron/: process_dwcas_cron.in
docs/: aws-setup.rst  aws-steps.md  aws_experiment.md  aws_experiment.rst  aws_workflow.rst  debugging.md  openapi.yml  s2n_overview.rst  specify_resolver.rst  ssl_certificates.rst  testing.rst  todo.rst  tos.md
flask/: structure.html
flask_app/: __init__.py  application.py
flask_app/analyst/: __init__.py  base.py  compare.py  constants.py  count.py  dataset.py  describe.py  manage.py  rank.py  routes.py  summary.py
flask_app/broker/: __init__.py  address.py.saveme  badge.py  base.py  constants.py  frontend.py  manage.py  map.py  map.py.saveme  name.py  occ.py  resolve.py  resolve.py.saveme  routes.py  s2n_type.py  stats.py
flask_app/common/: __init__.py  base.py  constants.py  s2n_type.py  util.py
flask_app/resolver/: solr_controller.py
flask_app/sp_cache/: config.py  process_dwca.py  routes.py  solr_controller.py
flask_app/sp_cache.saveme/: config.py  process_dwca.py  solr_controller.py
flask_app/templates/: analyst.index.html  broker.index.html  swagger_ui.broker.html
misc/: debugging.html  deploy.html  docker.html  example_sp6_export.html  prerequisites.html  ssl_certificates.html  taxonomy_tools.html  testing.html
obsolete/: chunkfile.sh  split_records.py
obsolete/aws/: specnet-glue-pipeline.yaml  workflow.py
obsolete/cron/: process_dwcas_cron.in
obsolete/fileop/: ready_file.py
obsolete/s2n/: aggregate_data_matrix.py  build_test_aggregated_data.py  sparse_matrix.py  summary_matrix.py
obsolete/solr_cores/: lm_solr.sh.in
obsolete/tests/: test_dwca.py
obsolete/util/: dwca.py  geotools.py  logtools.py  utils.py
scripts/: aws_analyst_trigger.txt  instructions.rst  process_gbif_on_ec2.py  rs_create_sps_functions.sql  rs_stored_procedures.sql  rs_subset_gbif.sql  rs_summarize_data.sql  specnet-glue-pipeline.yaml  user_data_for_ec2spot.sh  user_data_for_ec2spot.sh.saveme  workflow.py
solr_cores/occurrences/: core.properties
span/: __init__.py
span/common/: constants.py
span/provider/: api.py  gbif.py  lm_xml.py  mopho.py
span/task/: __init__.py  calc_stats.py  calc_stats.userdata.sh
span/test/: __init__.py
spanalyst/aws/: tools.py
spanalyst/common/: constants.py  log.py  util.py
spanalyst/matrix/: heatmap_matrix.py  pam_matrix.py  species_data_matrix.py  summary_matrix.py
specnet/provider/: api.py  (+7 more)
sphinx/: conf.py  index.rst
spnet/: __init__.py
static/: index.html
tests/: README.rst  __init__.py  go.py  process_gbif_on_ec2.py  test_dwca.py  test_post_data.py  test_solr_controller.py  user_data_for_ec2spot.sh
(+186 files in other folders)
