[metadata]
name = lmtrex_zzeppozz
version = 0.1.0
description = Lifemapper Broker and Resolver service tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lifemapper/t-rex
author = Lifemapper Team
author_email = aimeestewart@ku.edu
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = https://github.com/lifemapper/t-rex/issues

[options]
packages = find:
python_requires = >=3.6
package_dir =
    = src

[options.packages.find]
where = src
